# VidBrain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_daemon.ps1  spec.md
.github/workflows/: python-ci.yml
.trae/documents/: architecture-evolution-phase2-3.md  checkpoint-resume-audit.md  continuous-streaming-plan.md  desktop-friendly-plan.md  distributed-asr-offload-plan.md  e2e-verification-plan.md  embedding-feasibility.md  evolution-plan.md  implementation-plan.md  next-steps.md  nteration-plan.md  performance-optimization-plan.md  replace-flake8-with-ruff-plan.md  self-evolving-gap-analysis.md  主控节点与自动发现方案对比计划.md
.trae/skills/优雅启动/: SKILL.md
.trae/skills/提交前本地CI/: SKILL.md
.trae/specs/add-remote-asr-roles/: checklist.md  spec.md  tasks.md
.trae/specs/checkpoint-resume/: spec.md
docs/: manual.md  vidbrain-remote-asr-feasibility.md
docs/skills/: MEMORY.md  session-log-archive-skills.md
eval/: aggregator.py  eval_runner.py  reviewer_prompt.py  video_list.txt  video_list_small.txt
scripts/: archive_eval_report.sh  archive_pitfalls.sh  lint-and-test.ps1
src/: cli.py  main.py
src/models/: __init__.py  config.py  state.py
src/services/: agent_service.py  asr_service.py  asr_vulkan_service.py  chunk_service.py  classifier_service.py  drafts_service.py  embedding_service.py  feedback_service.py  pipeline_service.py  refiner_service.py  remote_asr_service.py  updater_service.py
src/utils/: audit.py  db.py  frontmatter.py  logger.py  metrics.py  singleton.py  throttle.py  vault_cache.py  watcher.py
test_vault/: #4 _ 从英专到智能合约开发的 pseudoyu_2026-05-01_@polebug23_BV1wV411N7eQ.md  #meovv #body #日常 - 抖音@OO.OO96.md
tests/: conftest.py  test_agent_service.py  test_aggregator.py  test_asr_service.py  test_asr_vulkan.py  test_audit.py  test_chunk_service.py  test_classifier.py  test_config.py  test_db.py  test_db_extended.py  test_drafts.py  test_embedding.py  test_embedding_extended.py  test_feedback.py  test_feedback_extended.py  test_logger.py  test_main_parser.py  test_main_roles.py  test_metrics.py  test_pipeline.py  test_pipeline_service.py  test_refiner.py  test_refiner_extended.py  test_remote_asr_service.py  test_reviewer_prompt.py  test_singleton.py  test_throttle.py  test_throttle_extended.py  test_updater.py  test_updater_extended.py  test_vault_cache.py  test_watcher.py
vidbrain/: agent_graph.py  asr_engine.py  asr_engine_vulkan.py  audit.py  classifier.py  config.py  db.py  drafts.py  embedding.py  feedback.py  logger.py  main.py  metrics.py  pipeline.py  refiner.py  singleton.py  throttle.py  updater.py  vault_cache.py  watcher.py
vidbrain/tests/: test_classifier.py  test_drafts.py  test_feedback.py  test_main.py  test_profile.py  test_refiner.py  test_throttle.py  test_updater.py
(+22 files in other folders)
