[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidbrain"
version = "0.1.0"
description = "本地视频 ASR 提取与云端 Agent 自迭代 Obsidian 知识库系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["whisper", "obsidian", "knowledge-base", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "watchdog>=6.0.0",
    "openai>=1.55.0",
    "langgraph>=0.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "black>=24.0",
    "ruff>=0.8.0",
    "pylint>=3.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", "src/main.py"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring (handled by Ruff)
    "C0115",  # missing-class-docstring
    "R0903",  # too-few-public-methods (dataclasses 常见)
]

[tool.pylint.format]
max-line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = [".git", ".venv", "__pycache__", ".mypy_cache", ".pytest_cache", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
ignore = ["E203", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10
